@@ -2,7 +2,6 @@ package itf221.gvi.boom.io;
 
 import itf221.gvi.boom.data.Company;
 import itf221.gvi.boom.data.OfferedPresentation;
-import itf221.gvi.boom.data.Room;
 import itf221.gvi.boom.data.Student;
 import org.junit.jupiter.api.Test;
 
@@ -22,15 +21,15 @@ public class StudentInterpreterTest {
     void interpretTest() {
 
         // initializer list by scheme: id, minCapacity, maxCapacity, specialty, maxPresentations, earliestTimeslot, name
-        Company tmpCompany1 = new Company("Company1", Arrays.asList(new OfferedPresentation(1, 0, 20, "specialty1", 'A', "Company1")));
-        Company tmpCompany2 = new Company("Company2", Arrays.asList(new OfferedPresentation(2, 0, 20, "specialty2", 'A', "Company2")));
-        Company tmpCompany3 = new Company("Company3", Arrays.asList(new OfferedPresentation(3, 0, 30, "specialty3", 'A', "Company3")));
-        Company tmpCompany4 = new Company("Company4", Arrays.asList(new OfferedPresentation(4, 0, 5, "specialty4", 'C', "Company4")));
-        Company tmpCompany5 = new Company("Company5", Arrays.asList(new OfferedPresentation(5, 0, 5, "specialty5", 'C', "Company5")));
+        Company tmpCompany1 = new Company("Company1", List.of(new OfferedPresentation(1, 0, 20, "specialty1", 'A', "Company1")));
+        Company tmpCompany2 = new Company("Company2", List.of(new OfferedPresentation(2, 0, 20, "specialty2", 'A', "Company2")));
+        Company tmpCompany3 = new Company("Company3", List.of(new OfferedPresentation(3, 0, 30, "specialty3", 'A', "Company3")));
+        Company tmpCompany4 = new Company("Company4", List.of(new OfferedPresentation(4, 0, 5, "specialty4", 'C', "Company4")));
+        Company tmpCompany5 = new Company("Company5", List.of(new OfferedPresentation(5, 0, 5, "specialty5", 'C', "Company5")));
 
         Map<String, Company> tmpCommap = Map.of("Company1", tmpCompany1, "Company2", tmpCompany2, "Company3", tmpCompany3, "Company4", tmpCompany4, "Company5", tmpCompany5);
 
-        List<Company> companyData = new ArrayList<Company>(tmpCommap.values());
+        List<Company> companyData = new ArrayList<>(tmpCommap.values());
 
         List<OfferedPresentation> allOffered = new ArrayList<OfferedPresentation>();
         allOffered.addAll(tmpCompany1.getOfferedPresentations());
@@ -47,10 +46,10 @@ public class StudentInterpreterTest {
         List<Student> expectedData = Arrays.asList(tmpStudent1, tmpStudent2, tmpStudent3, tmpStudent4);
 
 
-        ArrayList<String> tmpRow1 = new ArrayList<String>(Arrays.asList("Class1", "name1", "surname1", "1", "2", "3", "4", "5"));
-        ArrayList<String> tmpRow2 = new ArrayList<String>(Arrays.asList("Class2", "name2", "surname2", "1", "2", "3", "4", "5"));
-        ArrayList<String> tmpRow3 = new ArrayList<String>(Arrays.asList("Class3", "name3", "surname3", "1", "2", "3", "4", "5"));
-        ArrayList<String> tmpRow4 = new ArrayList<String>(Arrays.asList("Class4", "name4", "surname4", "1", "2", "3", "4", "5"));
+        ArrayList<String> tmpRow1 = new ArrayList<>(Arrays.asList("Class1", "name1", "surname1", "1", "2", "3", "4", "5"));
+        ArrayList<String> tmpRow2 = new ArrayList<>(Arrays.asList("Class2", "name2", "surname2", "1", "2", "3", "4", "5"));
+        ArrayList<String> tmpRow3 = new ArrayList<>(Arrays.asList("Class3", "name3", "surname3", "1", "2", "3", "4", "5"));
+        ArrayList<String> tmpRow4 = new ArrayList<>(Arrays.asList("Class4", "name4", "surname4", "1", "2", "3", "4", "5"));
 
         List<List<String>> testParameters = new ArrayList<>(Arrays.asList(tmpRow1, tmpRow2, tmpRow3, tmpRow4));
 
